--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Add_info"></activity>
+        <activity android:name=".addinfo2"></activity>
+        <activity android:name=".home2" />
+        <activity android:name=".Add_info" />
         <activity android:name=".home" />
         <activity android:name=".Registration" />
         <activity android:name=".MainActivity">
